cms/static/css/styles.css
/* ... */
.lite-green-check {
  background-image:url(http://csscheckbox.com/checkboxes/lite-green-check.png);
}

label.css-label:hover {
  color:#E95420;
}

.checkbox.gt-stress-q-btn:checked {
  background-color:#f3a140;
}

.checkbox.gt-stress-q-btn:hover {
  background-color:#f3a140;
}

.gt-check-btn {
  height:35px;
  border-radius:100px;
  border:0px solid black;
  color:#242e50;
  text-shadow:none;
  font-family:Montserrat, sans-serif;
  font-weight:700;
  background-image:none;
  background-color:rgba(243, 161, 64, 0.5);
  margin:5px;
  box-shadow:none;
  font-size:14px;
  padding:8px 17px;
  z-index:100;
  cursor:pointer;
}

.checkboxes label {
  height:35px;
  border-radius:100px;
  border:0px solid black;
  color:#242e50;
  text-shadow:none;
  font-family:Montserrat, sans-serif;
  font-weight:700;
  background-image:none;
  background-color:rgba(243, 161, 64, 0.5);
  box-shadow:none;
  font-size:14px;
  padding:8px 17px;
  cursor:pointer;
  display:inline-block;
  margin-right:5px;
  margin-bottom:20px;
}

input[type=checkbox]:checked + label {
  color:#242e50;
  background:#f3a140;
}

.checkboxes label:hover {
  background-color:#f3a140;
}

.gt-lt {
  float:left;
  padding-right:15px;
  width: 100%;
}

.gt-rt {
  text-align:left;
  float:right;
  padding-right:15px;
}

@media (max-width: 991px) {
  .row.gt-highlights-home-container {
    width:100%!important;
    margin:0 auto;
  }
}

.col-md-12.gt-collapse-col {
  padding-left:25px;
}

.gt-highlights-home-row {
  width:50% !important;
  margin:0 auto !important;
}

@media (max-width: 991px) {
  .gt-highlights-home-row {
    width:100% !important;
    margin:0 auto !important;
  }
}

.gt-partner-heading.rich-text p {
  font-size:18px;
  text-align:center;
  padding:0px 30px;
  font-family:'Nunito Sans', sans-serif;
}

@media (max-width: 991px) {
  .gt-partner-heading.rich-text p {
    font-size:14px;
    text-align:left;
    padding:0px 0px;
  }
}

@media (max-width: 767px) {
  .gt-partner-heading.rich-text p {
    font-size:14px;
    text-align:center;
  }
}

.gt-partner-tagline-rich-text p {
  font-size:18px;
  text-align:left;
  padding:0px 40px 0px 10px !important;
  text-align: center;
  /* width:50%; */
  font-family:'Nunito Sans', sans-serif;
}

@media (max-width: 991px) {
  .gt-partner-tagline-rich-text p {
    font-size:16px;
    text-align: center;
    text-align:left;
    padding:0px !important;
    width:100%;
  }
}

@media (max-width: 767px) {
  .gt-partner-tagline-rich-text p {
    font-size:14px;
    text-align:left;
  }
}

.col-lg-6.gt-stress-col-1 {
  width:100% !important;
}

.gt-highlights-btn-text-block h1 {
  font-size:18px !important;
}

.gt-header-stress-result {
  width:206px;
  height:30px;
  margin-top:-40px;
  margin-left:10px;
  position:absolute;
}

@media (max-width: 991px) {
  .gt-header-stress-result {
    width:206px;
    height:30px;
    float:none;
    margin-top:-35px;
  }
}

.gt-header-stress-result.rich-text p {
  margin:0px !important;
  padding-left:30px;
  font-size:18px;
}

.gt-stress-back {
  background-image:url(../images/gt-back-green.svg);
  background-position:left;
  background-repeat:no-repeat;
  padding-top:2px;
  color:#16b28f;
  display:inline-block;
}

.gt-stress-back:hover {
  background-image:url(../images/gt-back.svg);
  background-position:left;
  background-repeat:no-repeat;
  padding-top:2px;
  color:#242e50 !important;
  display:inline-block;
}

@media (max-width: 767px) {
  .gt-header-stress-result {
    text-align:center;
    margin-top:43px;
    margin-bottom:20px;
    margin:0 auto;
    position:static;
  }
}

@media (max-width: 991px) {
  .gt-header-stress-result.rich-text p {
    font-size:16px;
  }
}

@media (max-width: 767px) {
  .gt-header-stress-result.rich-text p {
    font-size:14px;
  }
}

.row.gt-header-content.gt-header-width {
  width:60%;
}

@media (max-width: 991px) {
  .row.gt-header-content.gt-header-width {
    width:80%;
  }
}

@media (max-width: 767px) {
  .row.gt-header-content.gt-header-width {
    width:95%;
  }
}

.gt-stress-option {
}

.responsive-object{
 padding-bottom: 0px !important;
}

.responsive-object iframe {
    width: 100%;
}

.menu_active{
border-bottom: 2px solid #16b28f;
}

.gt-panel-body-content.rich-text h4 {
  font-family:'Nunito Sans', sans-serif;
  font-size:14px;
  font-weight:700;
  margin-top:4px;
  padding-top:0px;
  color:#252e4e;
  text-align:left;
  margin-bottom:5px;
}

.panel-body.gt-partner-body {
  padding:10px 40px;
}

.gt-body-title-text.rich-text p {
  font-size:18px;
  font-family:'Nunito Sans', sans-serif;
  font-weight:normal;
  font-style:normal;
  font-stretch:normal;
  line-height:24px;
  text-align:center;
  margin-bottom:0px !important;
  width:95%;
  margin:0 auto;
}

.gt-body-title-text.rich-text h2 {
  font-family:'Montserrat';
  font-weight:700;
  font-size:24px;
  text-align:center;
}

@media (max-width: 767px) {
  .partner-header.rich-text h2 {
    font-size:22px;
  }
}

.bg-section-txt.rich-text h2 {
  font-family:Montserrat, sans-serif;
  font-size:32px;
  font-weight:600;
  letter-spacing:1px;
  text-align:center;
  padding-top:12px;
  margin-bottom:10px;
  color:#367c7d;
}

@media (max-width: 767px) {
  .bg-section-txt.rich-text h2 {
    font-size:22px;
  }
}

.bg-section-txt.rich-text p {
  font-size:18px;
  line-height:24px;
  font-family:Nunito Sans;
}

@media (max-width: 991px) {
  .bg-section-txt.rich-text p {
    font-size:16px;
    line-height:24px;
    font-family:Nunito Sans;
  }
}

@media (max-width: 767px) {
  .bg-section-txt.rich-text p {
    font-size:14px;
    line-height:24px;
    font-family:Nunito Sans;
  }
}

h5 {
  font-weight:600;
  font-size:14px;
}

.gt-partner-text-block.rich-text h4 {
  padding-top:30px;
  font-size:18px;
  font-family:Nunito Sans;
}

@media (max-width: 991px) {
  .gt-partner-text-block.rich-text h4 {
    font-size:16px;
  }
}

@media (max-width: 767px) {
  .gt-partner-text-block.rich-text h4 {
    font-size:14px;
  }
}
/* ... */

